spacing & scaling fixes for text

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -92,26 +92,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2vh;
+  gap: min(4vh, 64px);
   text-align: center;
-  margin-bottom: 5vh;
+  margin-bottom: min(5vh, 48px);
+}
+
+.nameTextContainer {
+  display: flex;
+  align-items: baseline;
+  gap: min(3vw, 48px)
 }
 
 .nameText {
-  font-size: 10vw;
-  font-weight: 100;
+  font-size: min(10vw, 108px);
+  font-weight: 400;
   font-style: italic;
+}
 
+.ampersand {
+  font-size: min(6vw, 72px);
+  font-weight: 300;
+  font-style: italic;
 }
 
 .infoTextBold {
-  font-size: 2.5vw;
+  font-size: min(4vw, 48px);
   font-weight: 700;
-  margin: 0 3vw;
 }
 
 .infoText {
-  font-size: 2.5vw;
+  font-size: min(2.5vw, 30px);
   font-weight: 300;
 }
 
